# crossnative

./: CMakeLists.txt  README.md
include/: common_cross.h
src/linux/: common_linux_impl.cc
src/win/: common_win_impl.cc
test/: CMakeLists.txt  fuzzytest.cc
